# sre-env-triage

./: .dockerignore  .env.example  .gitignore  Dockerfile.ui  README.md  __init__.py  baseline_test_results_gpt_oss_120b.md  baseline_test_results_llama3.2_3b.md  blog.md  client.py  docker-compose.yml  models.py  openenv.yaml  pyproject.toml  test_client.py  test_env_interface.py  train_sre_agent_colab.py
agents/: base.py  random_agent.py  rule_agent.py  trained_agent.py
data/: random_episodes.csv  random_hf_dataset.jsonl  random_steps.json  rule_episodes.csv  rule_hf_dataset.jsonl  rule_steps.json
eval/: evaluate.py  runner.py
hf_repo/: .gitattributes  README.md
llm/: base_client.py  openrouter_client.py  prompts.py
reports/: random_summary.json  rule_summary.json
scenarios/: benchmark_cases.json  phase2_benchmark_cases.json
server/: Dockerfile  __init__.py  app.py  rewards.py  sensors.py  sre_decision_env_environment.py
tests/: test_env_contract.py  test_phase1.py
training_script/: train_sre_agent_colab.py
ui/: app.py
v2/agents/: action_space.py  crew.py  observation_space.py  tools.py
v2/config/: env_config.yaml
v2/env/: communication.py  reward.py  scenarios.py  sre_env.py  state.py
v2/scripts/: generate_dataset.py  push_to_hf.py  run_crew_baseline.py  sample_rollout.py
